--- a/WeChatWeb/Views/Company/List.cshtml
+++ b/WeChatWeb/Views/Company/List.cshtml
@@ -1,16 +1,28 @@
-﻿@{
-    ViewBag.Title = "List";
-    Layout = "~/Views/Shared/_MobileLayout.cshtml";
+﻿@model IList<WeChatWeb.Models.CompaniesListModel>
+@{
+    ViewBag.Title = "公司列表";
+        Layout = "~/Views/Shared/_MobileLayout.cshtml";
+}
+@section Css
+{
+    <link rel="stylesheet" href="@Url.Content("~/Content/iui/list.css")" type="text/css" />
 }
 
-<div class="toolbar">
-    <h1 id="pageTitle">公司列表</h1>
-    <a id="menuButton" class="button" href="/" style="display:inline" target="_self">返回首页</a>
-</div>
-
-<div id="home" class="panel" selected="true">
-    <div title="Story">
-        <h2>The Thermonuclear "Oops" List</h2>
-        <p>Accidents happen. No one is immune: typos slip in, numbers get misdialed, directions are screwed up. We all make them; no one is perfect.Except that these mistakes involved thermonuclear weapons, and could easily have reduced a sizable hunk of this world to a Geiger-clicking pit.</p>
+    <div class="toolbar">
+        <h1 id="pageTitle">公司列表</h1>
+        <a id="menuButton" class="button" href="/" style="display: inline" target="_self">返回首页</a>
     </div>
-</div>
+
+
+<ul id="home" selected="true">
+    @foreach (var t in Model)
+    {
+        <li>
+            <a class="digg-count">@t.FollowedUsersCount</a>
+            @Html.ActionLink(t.Name, "Detail", "Company", null, new { target = "_self" })
+        </li>
+    }
+    <li>@Html.ActionLink("加载更多", "List", "Company", new { page = ViewBag.CurrentPage + 1}, new { target = "_self" }) </li>
+
+
+</ul>
